--- a/src/components/ui/ProfileContainer/Profile/Info/Info.module.css
+++ b/src/components/ui/ProfileContainer/Profile/Info/Info.module.css
@@ -1,18 +1,11 @@
-.info {
-    color: peru;
-}
-
 .avatar {
     color: gold;
-}
-
-.myPhoto {
     width: 300px;
     height: 200px;
     border-radius: 40px;
 }
 
-.myProfileDescription {
+.profileDescription {
     color: green;
 }
 
