Added possibility LogIn and LogOut (with cookie - samuraijsocial-network.samuraijs.com); Navigate (Login - Profile); + refactoring

--- a/src/components/common/FormsControls/FormsControls.module.css
+++ b/src/components/common/FormsControls/FormsControls.module.css
@@ -1,8 +1,8 @@
-.formControls textarea {
+.formControls input {
   border: solid yellow 2px;
 }
 
-.formControls.error textarea {
+.formControls.error input {
   border: solid red 5px;
 }
 
