--- a/src/components/ui/Header/HeaderContainer/Header.module.css
+++ b/src/components/ui/Header/HeaderContainer/Header.module.css
@@ -1,11 +1,8 @@
-.logOut {
-    float: left;
-}
 
 .header {
     grid-area: header;
     background-color: green;
-    height: 50px;
+    height: 80px;
 }
 
 .logo {
@@ -19,4 +16,9 @@
 
 .login a {
     color: white;
+}
+
+.logOut {
+    color: red;
+    float: right;
 }
